--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
+    "mongoose": "^8.8.1",
     "next": "14.2.15",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
