--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "next": "14.2.15",
     "next-auth": "^4.24.10",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
